# unicorn-kirothon

./: .gitignore
.kiro/hooks/: auto-update-docs.kiro.hook
.kiro/specs/meeting-alignment-ai/: .config.kiro  branding.md  requirements.md
back/: .env.example  .env.sample  README.md  ai.py  main.py  models.py  pyproject.toml  services.py  storage.py
back/tests/: test_api.py
docs/: presentation.html
front/: AGENTS.MD  README.md  package-lock.json  package.json
front/src/: auth.ts
front/src/app/: globals.css  layout.tsx
front/src/app/api/calendar/: route.ts
front/src/app/api/profile/suggest/: route.ts
front/src/app/api/stt/: route.ts
front/src/app/login/: page.tsx
front/src/app/meetings/[meetingId]/: page.tsx
front/src/app/meetings/[meetingId]/session/: page.tsx
front/src/app/meetings/new/: page.tsx
front/src/app/profile/: page.tsx
front/src/components/: app-sidebar.tsx  calendar-import.tsx  create-meeting-shell.tsx  dashboard-shell.tsx  meeting-detail-shell.tsx  meeting-session-shell.tsx
front/src/lib/: api.ts  profile-store.ts  role-theme.ts  types.ts
front/src/lib/api/: client.ts  config.ts  websocket.ts
front/src/lib/audio/: audio-utils.ts  use-audio-recorder.ts  use-deepgram-stt.ts
front/src/types/: web-speech.d.ts
